<resources>
    <string name="app_name">Spyro 2 100% Walkthrough</string>
    <string name="title_home">Home Page</string>
    <string name="title_gameinfo">Game Info</string>
    <string name="title_walkthrough">Walkthrough</string>
    <string name="title_secrets">Secrets</string>
    <string name="spyro_2_reignited_trilogy">Spyro 2 Reignited Trilogy</string>
    <string name="title_charinfo">Character Info</string>
    <string name="title_glimmer">Glimmer</string>
    <string name="intro_home">This App is a walkthrough/100% guide to fully complete Spyro 2 with all gems, orbs and secrets. This app also has information on the game as well as some hidden secrets and glitches.</string>
    <string name="game_info_intro">Spyro is a platforming game about a small purple dragon called spyro and his companion sparks on their many adventures in avalar on their quest to defeat Ripto, a Riptoc set on conquering avalars worlds.</string>
    <string name="game_info_characters">Characters</string>
    <string name="spyro_info">Spyro</string>
    <string name="sparks_info">Sparks</string>
    <string name="hunter_info">Hunter</string>
    <string name="Professor_info">The Professor</string>
    <string name="elora_info">Elora</string>
    <string name="zoe_info">Zoe</string>
    <string name="moneybags_info">Money Bags</string>
    <string name="crush_info">Crush</string>
    <string name="gulp_info">Gulp</string>
    <string name="ripto_info">Ripto</string>
    <string name="spyro_desc">Spyro the Dragon is the main protagonist of this game. Spyro is a young purple dragon that comes from the Artisans World. He is known for being courageous, headstrong, eager, and arrogant. He has a strong sense of heroism, friendliness, and has a fiery personality.</string>
    <string name="sparks_desc">Sparx the Dragonfly is Spyros closest companion. Dragonflies offer protection for young dragons such as Spyro. He too has the same mischievous personality as Spyro, but he is very protective of him. Sparx also acts as Spyros health meter.</string>
    <string name="hunter_desc">Hunter the Cheetah is a supporting character native to Avalar. Hunter is a tall anthropomorphic cheetah, he has bright orange colour with brown spots all over his coat, as well as a bright yellow underbelly and goatee. Hunter is a laid-back, physically talented, and somewhat gullible character. </string>
    <string name="Professor_desc">The Professor is very stout with a large head, teal eyes, grey hair, and eyebrows. He wears glasses, a white lab coat, and black shoes. The Professor is an intellectual individual who is always looking for solutions. He is always seen carrying around a pencil and his notepad to write down the coordinates from his studies.</string>
    <string name="elora_desc">Elora is a faun from Avalar, she initially greets Spyro and also gives him the guidebook for his journey. Elora has blue eyes and purple eyeshadow, her top torso has skin with a small green corset, and she has a fox-like tail. Elora is an expert on the people of Avalar, becoming the natural choice when it came to helping Spyro defeat the evil Ripto.</string>
    <string name="zoe_desc">Zoe is a summer fairy who offers Spyro advice and serving as a checkpoint for him throughout each of the Realms he visits. She is particularly helpful to newer players and is essentially considered a tutorial.</string>
    <string name="moneybags_desc">Moneybags is a bear from Avalar who acts as a neutral character. Moneybags is an upper-class, money-grubbing, and somewhat deceitful conman who is infamous for charging Spyro exorbitant fees, paid in Gems, in order for Spyro to advance in certain areas.</string>
    <string name="crush_desc">Crush is the more dim-witted minions of Ripto. Crush is strong yet unintelligent. His stupidity ends up getting him crushed during a fight with Spyro. Crush first fought against Spyro underneath Summer Forest Castle, but eventually the roof fell in on top of him and knocked him out.</string>
    <string name="gulp_desc">Gulp is the stronger of Riptos two minions. Gulp is a brutish yet fairly intelligent creature. He is extremely loyal to Ripto. Gulp can ingest certain objects and spits out its harmful qualities at his opponents, such as spewing out waves of green energy after devouring a metal barrel.</string>
    <string name="ripto_desc">Ripto is the main antagonist of this game. Ripto is a riptoc (small dinosaur) and a persistent enemy of Spyro. He also has two minions serving under him. Ripto is a despicable madman who enjoys power simply for the sake of it. He delights in causing all sorts of trouble and havoc with his magic, and is known for his general disgust for Dragons.</string>
    <string name="summer_forest_title">Summer Forest</string>
    <string name="autumn_plains_title">Autumn Plains</string>
    <string name="winter_tundra_title">Winter Tundra</string>
    <string name="level_glimmer">Glimmer</string>
    <string name="level_idol_springs">Idol Springs</string>
    <string name="level_colossus">Colossus</string>
    <string name="level_sunny_beach">Sunny Beach</string>
    <string name="level_hurricos">Hurricos</string>
    <string name="level_aquaria_towers">Aquaria Towers</string>
    <string name="level_ocean_speedway">Ocean Speedway</string>
    <string name="level_crushs_dungeon">Crushs Dungeon</string>
    <string name="level_skelos_badlands">Skelos Badlands</string>
    <string name="level_crystal_glacier">Crystal Glacier</string>
    <string name="level_breeze_harbor">Breeze Harbor</string>
    <string name="level_zephyr">Zephyr</string>
    <string name="level_scorch">Scorch</string>
    <string name="level_fracture_hills">Fracture Hills</string>
    <string name="level_magma_cone">Magma Cone</string>
    <string name="level_shady_oasis">Shady Oasis</string>
    <string name="level_metro_speedway">Metro Speedway</string>
    <string name="level_icy_speedway">Icy Speedway</string>
    <string name="level_gulps_overlook">Gulps Overlook</string>
    <string name="level_mystic_marsh">Mystic Marsh</string>
    <string name="level_cloud_temples">Cloud Temples</string>
    <string name="level_robotica_farms">Robotica Farms</string>
    <string name="level_metropolis">Metropolis</string>
    <string name="level_canyon_speedway">Canyon Speedway</string>
    <string name="level_riptos_arena">Riptos Arena</string>
    <string name="level_dragon_shores">Dragon Shores</string>
    <string name="summer_forest_video">Summer Forest Video</string>
    <string name="autumn_plains_video">Autumn Plains Video</string>
    <string name="winter_tundra_video">Winter Tundra Video</string>
    <string name="glimmer_video">Glimmer Video</string>
    <string name="idol_springs_video">Idol Springs Video</string>
    <string name="colossus_video">Colossus Video</string>
    <string name="sunny_beach_video">Sunny Beach Video</string>
    <string name="hurricos_video">Hurricos Video</string>
    <string name="aquaria_towers_video">Aquaria Towers Video</string>
    <string name="ocean_speedway_video">Ocean Speedway Video</string>
    <string name="crushs_dungeon_video">Crushs Dungeon Video</string>
    <string name="skelos_badlands_video">Skelos Badlands Video</string>
    <string name="crystal_glacier_video">Crystal Glacier Video</string>
    <string name="breeze_harbor_video">Breeze Harbor Video</string>
    <string name="zephyr_video">Zephyr Video</string>
    <string name="scorch_video">Scorch Video</string>
    <string name="fracture_hills_video">Fracture Hills Video</string>
    <string name="magma_cone_video">Magma Cone Video</string>
    <string name="shady_oasis_video">Shady Oasis Video</string>
    <string name="metro_speedway_video">Metro Speedway Video</string>
    <string name="icy_speedway_video">Icy Speedway Video</string>
    <string name="gulps_overlook_video">Gulps Overlook Video</string>
    <string name="mystic_marsh_video">Mystic Marsh Video</string>
    <string name="cloud_temples_video">Cloud Temples Video</string>
    <string name="robotica_farms_video">Robotica Farms Video</string>
    <string name="metropolis_video">Metropolis Video</string>
    <string name="canyon_speedway_video">Canyon Speedway Video</string>
    <string name="riptos_arena_video">Riptos Arena Video</string>
    <string name="dragon_shores_video">Dragon Shores Video</string>
    <string name="skill_points_title">Skill Points</string>
    <string name="sp_title_idol_springs">Idol Springs: Land on Idol</string>
    <string name="sp_title_colossus">Colossus: Perfect in Hockey</string>
    <string name="sp_title_hurricos">Hurricos: All Windmills</string>
    <string name="sp_title_aquaria_towers">Aquaria Towers: All Seaweed</string>
    <string name="sp_title_ocean_speedway">Ocean Speedway: Under 1:10</string>
    <string name="sp_title_crushs_dungeon">Crushs Dungeon: Perfect</string>
    <string name="sp_title_skelos1">Skelos Badlands: Catbat Quartet</string>
    <string name="sp_title_skelos2">Skelos Badlands: All Cacti</string>
    <string name="sp_title_scorch">Scorch: All Trees</string>
    <string name="sp_title_fracture_hills">Fracture Hills: 3 Laps of Supercharge</string>
    <string name="sp_title_icy_speedway">Icy Speedway: Under 1:15</string>
    <string name="sp_title_metro_speedway">Metro Speedway: Under 1:15</string>
    <string name="sp_title_gulp1">Gulps Overlook: Perfect</string>
    <string name="sp_title_gulp2">Gulps Overlook Hit Ripto</string>
    <string name="sp_title_canyon_speedway">Canyon Speedway: Under 1:10</string>
    <string name="sp_title_ripto">Riptos Arena: Perfect</string>
    <string name="sp_desc_idol_springs">In the area with the supercharge there is an idol in the middle. Go to the roofs and glide to it and land on it.</string>
    <string name="sp_desc_colossus">Beat the hockey challenge with the opponent without them scoring a goal. Make sure to flame the opponent to keep them from scoring</string>
    <string name="sp_desc_hurricos">In the Hurricos level there are 8 windmills that you can destroy. Destroy all of them, make sure to check every corner</string>
    <string name="sp_desc_aquaria_towers">Destroy the 11 strands of seaweed with the superflame that you get at the end of the level.</string>
    <string name="sp_desc_ocean_speedway">Complete the main course of Ocean Speedway in under 1:10, you can try as many times as you want. This one may take some practice</string>
    <string name="sp_desc_crushs_dungeon">You need to defeat Crush without taking any damage during the fight, make sure to jump the blue electricity and run to the side of the fireballs.</string>
    <string name="sp_desc_skelos1">Near the end of the level there is a section with 4 catbat enemies. Use the lava rocks to take them out, kill all 4 to get the skill point.</string>
    <string name="home_spyro_image_description">Image of Spyro</string>
    <string name="home_orb_image_description">Image of the collectable orbs in the game</string>
    <string name="home_gem_image_description">Image of the collectable gems in the game</string>
    <string name="home_talisman_image_description">Image of the collectable talismans in the game</string>
    <string name="game_info_sparks_description">Game Info Sparks Image</string>
    <string name="game_info_zoe_description">Game Info Zoe Image</string>
    <string name="game_info_gulp_description">Game Info Gulp Image</string>
    <string name="autumn_plains_title_description">Autumn Plains Title</string>
    <string name="level_shady_oasis_image_description">Shady Oasis Level Image</string>
    <string name="level_gulps_overlook_image_description">Gulps Overlook Level Image</string>
    <string name="level_canyon_speedway_image_description">Canyon Speedway Level Image</string>
    <string name="autumn_plains_image_description">Autumn Plains Level Image</string>
    <string name="sp_desc_canyon_speedway_desc">Canyon Speedway Skill Points Description</string>
</resources>