<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.spyro2100walkthrough.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_gameinfo"
        android:name="com.example.spyro2100walkthrough.ui.gameinfo.GameInfoFragment"
        android:label="@string/title_gameinfo"
        tools:layout="@layout/fragment_gameinfo" >
        <action
            android:id="@+id/spyro_to_info"
            app:destination="@id/navigation_spyro_info" />
    </fragment>

    <fragment
        android:id="@+id/navigation_walkthrough"
        android:name="com.example.spyro2100walkthrough.ui.walkthrough.WalkthroughFragment"
        android:label="@string/title_walkthrough"
        tools:layout="@layout/fragment_walkthrough" />

    <fragment
        android:id="@+id/navigation_secrets"
        android:name="com.example.spyro2100walkthrough.ui.secrets.SecretsFragment"
        android:label="@string/title_secrets"
        tools:layout="@layout/fragment_secrets" />

    <fragment
        android:id="@+id/navigation_spyro_info"
        android:name="com.example.spyro2100walkthrough.ui.gameinfo.Spyro_Info"
        android:label="@string/title_charinfo"
        tools:layout="@layout/fragment_spyro__info"
        />

</navigation>