<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".ui.levels.winter_tundra.CanyonSpeedwayFragment">


    <TextView
        android:id="@+id/canyon_speedway_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/sp_desc_canyon_speedway_desc"
        android:fontFamily="@font/lithospro_black"
        android:text="@string/level_canyon_speedway"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/canyonspeedway_img"
        android:layout_width="283dp"
        android:layout_height="181dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/level_canyon_speedway_image_description"
        android:src="@drawable/canyon_speedway"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/canyon_speedway_title" />
</androidx.constraintlayout.widget.ConstraintLayout>