<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/purple"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lithospro_black"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spyro_home_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Talisman"
        android:layout_width="80dp"
        android:layout_height="82dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="132dp"
        android:contentDescription="@string/home_talisman_image_description"
        android:src="@drawable/vector_talisman"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toEndOf="@+id/Gem" />

    <ImageView
        android:id="@+id/Orb"
        android:layout_width="79dp"
        android:layout_height="76dp"
        android:layout_marginEnd="74dp"
        android:layout_marginRight="74dp"
        android:layout_marginBottom="140dp"
        android:contentDescription="@string/home_orb_image_description"
        android:src="@drawable/orb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Gem"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/Gem"
        android:layout_width="93dp"
        android:layout_height="83dp"
        android:layout_marginBottom="132dp"
        android:contentDescription="@string/home_gem_image_description"
        android:src="@drawable/vector_gem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Talisman"
        app:layout_constraintStart_toEndOf="@+id/Orb" />

    <ImageView
        android:id="@+id/spyro_home_image"
        android:layout_width="368dp"
        android:layout_height="179dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/home_spyro_image_description"
        android:src="@drawable/spyro_homepage"
        app:layout_constraintBottom_toTopOf="@+id/intro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home" />

    <TextView
        android:id="@+id/intro"
        android:layout_width="381dp"
        android:layout_height="114dp"

        android:fontFamily="@font/lithospro_regular"
        android:gravity="center"
        android:text="@string/intro_home"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Gem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spyro_home_image" />


</androidx.constraintlayout.widget.ConstraintLayout>